--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Yves Wienecke<Br/> Steven Borrego",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,9 @@
   },
   "homepage": "https://github.com/iyves/mood-music#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "dotenv": "^10.0.0",
+    "express": "^4.16.4",
+    "request": "^2.88.2",
+    "serve-favicon": "^2.5.0"
   }
 }
